2014-08-14  Akos Kiss  <akiss@inf.u-szeged.hu>

        Fix JSC::ARM64Assembler::LinkRecord::RealTypes
        https://bugs.webkit.org/show_bug.cgi?id=135906

        Reviewed by Michael Saboff.

        JSC::ARM64Assembler::LinkRecord::RealTypes::m_compareRegister is defined
        to occupy 5 bits but JSC::ARM64Assembler::RegisterID needs 6 bits. So,
        increase the size of the bit field and also reorganize the struct to 
        better align with word boundaries.

        * assembler/ARM64Assembler.h:

2014-08-13  Akos Kiss  <akiss@inf.u-szeged.hu>

        Add ARM64 support to CMake-based builds
        https://bugs.webkit.org/show_bug.cgi?id=135912

        Reviewed by Gyuyoung Kim.

        This patch ensures that CMake does not fail with Unknown CPU error when
        building for ARM64.

        * CMakeLists.txt:

2014-08-13  Wenson Hsieh  <wenson_hsieh@apple.com>

        Enable CSS_SCROLL_SNAP for iOS
        https://bugs.webkit.org/show_bug.cgi?id=135915

        Turn on CSS_SCROLL_SNAP for iOS and the iOS simulator.

        Reviewed by Tim Horton.

        * Configurations/FeatureDefines.xcconfig:

2014-08-13  Alex Christensen  <achristensen@webkit.org>

        Progress towards CMake on Mac.
        https://bugs.webkit.org/show_bug.cgi?id=135819

        Reviewed by Laszlo Gombos.

        * CMakeLists.txt:
        Add the remote inspector headers to the forwarding headers list.

2014-08-13  Daniel Bates  <dabates@apple.com>

        [iOS] Make JavaScriptCore and bmalloc build with the public SDK
        https://bugs.webkit.org/show_bug.cgi?id=135848

        Reviewed by Geoffrey Garen.

        * API/JSBase.h: Declare NSMap functions with external linkage when building for iOS without the
        header <Foundation/NSMapTablePriv.h>.
        * inspector/remote/RemoteInspector.mm: Define XPC functions with external linkage when building
        without the system header <xpc/xpc.h>.